assessment_handout.txt
Write in one or more topics for each question using the following topics:
 Variables, Conditionals, For Loops, While Loops, Array, Function, and Class.
If you get any error messages, copy and paste up to three of them in the boxes below.

#1 Topic:_____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
Variables, Conditionals,
Error Messages:



#2 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
Variables, Conditionals,
Error Messages:



#3 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
variables, array
Error Messages:
Traceback (most recent call last):
  File "index.py", line 30, in <module>
    for x in userInput3:
TypeError: 'int' object is not iterable


#4 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
Variables, Conditionals, While Loops
Error Messages:
File "index.py", line 46
    print("Good Job")
                    ^
IndentationError: unindent does not match any outer indentation level



#5 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
array, for loops
Error Messages:



#6 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
variables, function
Error Messages:



#7 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
Variables, Array, Function, Class
Error Messages:



#8 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
variables, conditionals, function
Error Messages:
File "index.py", line 110
    def problem8()
                 ^
SyntaxError: invalid syntax



#9 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
variables, Array,
Error Messages:



#10 Topic: _____
(Choose one or more: Variables, Conditionals, For Loops, While Loops, Array, Function, and Class)
variables, array, function, class
Error Messages:
